--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue3-signature-pad": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "^24.6.0",
     "@types/sortablejs": "^1.15.8",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
